[gd_scene load_steps=12 format=3 uid="uid://dg8yhobkc2qwa"]

[ext_resource type="Script" path="res://PlayerModel/scripts/player.gd" id="1_2vnrk"]
[ext_resource type="PackedScene" uid="uid://bxm42pkl4oam4" path="res://PlayerModel/swipe_button.tscn" id="2_4ff78"]
[ext_resource type="Shader" path="res://shaders/retro_glow.gdshader" id="2_tg25c"]
[ext_resource type="Script" path="res://PlayerModel/scripts/animations.gd" id="2_yab13"]
[ext_resource type="PackedScene" uid="uid://c5q5tydk64n6l" path="res://PlayerModel/hover_animation.tscn" id="3_7avhi"]
[ext_resource type="PackedScene" uid="uid://cqvsorfybjghr" path="res://PlayerModel/jump_meter.tscn" id="4_5eltt"]
[ext_resource type="Script" path="res://PlayerModel/scripts/jump.gd" id="4_n5nwh"]
[ext_resource type="PackedScene" uid="uid://bsrof0qm15bef" path="res://PlayerModel/loader.tscn" id="5_yir65"]
[ext_resource type="Texture2D" uid="uid://difi524jggj23" path="res://light.png" id="7_7jspx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eo4bg"]
size = Vector2(45.0003, 45.9997)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4vcxh"]
shader = ExtResource("2_tg25c")
shader_parameter/rect_size = Vector2(0.12, 0.12)
shader_parameter/bness = 0.3
shader_parameter/fall_off_scale = 3.0
shader_parameter/b_offset = -0.09

[node name="Player" type="CharacterBody2D" groups=["gravity_affected"]]
position = Vector2(549, 587)
rotation = -6.28319
collision_layer = 15
collision_mask = 257
script = ExtResource("1_2vnrk")

[node name="SwipeScreen" parent="." instance=ExtResource("2_4ff78")]
visible = false
top_level = true

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_eo4bg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(5.28, 5.12001)

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.103
one_shot = true

[node name="Animations" type="Node" parent="."]
script = ExtResource("2_yab13")
hover_effect = ExtResource("3_7avhi")
jump_meter = ExtResource("4_5eltt")

[node name="Jump" type="Node" parent="."]
script = ExtResource("4_n5nwh")
loader = ExtResource("5_yir65")

[node name="InputDelay" type="Timer" parent="Jump"]
wait_time = 0.14
one_shot = true

[node name="HoverTimer" type="Timer" parent="Jump"]
one_shot = true

[node name="HoverTimerReset" type="Timer" parent="Jump"]
wait_time = 0.109
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("7_7jspx")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
z_index = 1
z_as_relative = false
y_sort_enabled = true
material = SubResource("ShaderMaterial_4vcxh")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.670588, 0, 0, 1)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="EffectTimer" to="Animations" method="_on_effect_timer_timeout"]
[connection signal="timeout" from="Jump/InputDelay" to="Jump" method="_on_jump_timer_timeout"]
[connection signal="timeout" from="Jump/HoverTimer" to="Jump" method="_on_hover_timer_timeout"]
